2009-04-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ProducerConsumerServer.pm: Important fix. Queued
	  elements were processed in the wrong order.
	
	* lib/PandoraFMS/Core.pm, lib/PandoraFMS/ReconServer.pm,
	  lib/PandoraFMS/DataServer.pm: Updated pandora_create_agent to
	  reflect the latest changes. Some fixes to Recon Server.


2009-04-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Fixed a typo that made the server go
	  down.
	
	* bin/pandora_server: Prevent alarm from bombing the main thread when
	  called within a thread.

2009-04-14  Ramon Novoa  <rnovoa@artica.es>

	* pandora_ctl, pandora_network, pandora_wmi, pandora_plugin,
	  pandora_prediction, bin/pandora_wmi, bin/pandora_plugin,
	  bin/pandora_prediction, bin/pandora_snmpconsole, bin/pandora_recon,
	  bin/pandora_network, pandora_recon, pandora_snmpconsole: Deleted
	  from repository. Old server code and startup scripts.
	
	* Makefile.PL, pandora_server_installer, lib/PandoraFMS/Config.pm
	  lib/PandoraFMS/DB.pm, lib/PandoraFMS/Tools.pm, bin/pandora_server,
	  pandora_package_installer, pandora_server: Updated to work with the
	  new code, removed unneeded dependencies, fixed some bugs etc.

	* lib/PandoraFMS/SNMPServer.pm, lib/PandoraFMS/PluginServer.pm,
	  lib/PandoraFMS/ProducerConsumerServer.pm, lib/PandoraFMS/Server.pm,
	  lib/PandoraFMS/PredictionServer.pm, lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/ReconServer.pm, lib/PandoraFMS/DataServer.pm,
	  lib/PandoraFMS/NetworkServer.pm, lib/PandoraFMS/WMIServer.pm: Added
	  to repository. New server code.

2009-04-02  Sancho Lerena <slerena@artica.es>

	* DB.pm: Function to process SNMP Alerts was not properly exported, so
	SNMP alerts in some environments don't run. Fixed (this is ok in 2.1).
	
	* util/udp_client.pl: Client to connect with pandora windows agent mini
	server and using with alerts to manage remote process / services in Windows
	
	* util/mcast_client.pl: Tool to check the UDP multicast notification 